# Coyote

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  AGENT_PR_READY_PLAN.md  CONTRIBUTING.md  LICENSE.md  README.md  build.sh  build_sim.sh  coyote-ci.yaml  custom_sim.tcl  find.py  flow_alveo.sh  flow_alveo_old.sh  flow_u55c.sh  genindex.html  index.html  objects.inv  program_coyote.sh  program_hacc_remote.sh  search.html  searchindex.js
examples/01_hello_world/hw/: CMakeLists.txt
examples/01_static_local/hw/: CMakeLists.txt
examples/01_static_local/sw/: CMakeLists.txt
examples/02_hls_vadd/hw/: CMakeLists.txt
examples/03_multitenancy/hw/: CMakeLists.txt
examples/03_multithreading/hw/: CMakeLists.txt
examples/04_user_interrupts/hw/: CMakeLists.txt
examples/04_user_interrupts/sw/: CMakeLists.txt
examples/06_gpu_p2p/sw/: CMakeLists.txt
examples/07_perf_fpga/hw/: CMakeLists.txt
examples/07_perf_fpga/sw/: CMakeLists.txt
examples/08_perf_rdma/hw/: CMakeLists.txt
examples/08_perf_rdma/sw/: CMakeLists.txt
examples/09_app_reconfiguration/sw/: CMakeLists.txt
examples/10_app_reconfiguration/hw/: CMakeLists.txt  example_fplan_u55c.xdc
examples/10_app_reconfiguration/sw/: CMakeLists.txt
examples/10_host_networking_alternative/hw/: CMakeLists.txt
examples/11_packet_sniffer/hw/: CMakeLists.txt
examples/14_perf_nvme/sw/: CMakeLists.txt
examples/hls4ml/hw/: CMakeLists.txt
examples/pilot_dataset/hw/: CMakeLists.txt
examples_hw/: CMakeLists.txt
examples_hw/apps/aes/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/aes_ecb/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/arrow/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/bitwise_and/: vfpga_top.svh
examples_hw/apps/gbm_dtrees/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/hls_vadd/: vfpga_top.svh
examples_hw/apps/hyperloglog/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/kmeans/: vfpga_top.svh
examples_hw/apps/minimal/: vfpga_top.svh
examples_hw/apps/packet_sniffer/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/perf_fpga/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/perf_local/: vfpga_top.svh
examples_hw/apps/rdma_aes/: vfpga_top.svh
examples_hw/apps/rdma_base/: vfpga_top.svh
examples_hw/apps/rdma_dpi/: vfpga_top.svh
examples_hw/apps/rdma_perf/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/shift_left/: vfpga_top.svh
examples_hw/apps/tcp_iperf/: perf_tcp_c0_0.svh  send_recv_role.sv
examples_hw/apps/two_channel/: init_ip.tcl  vfpga_top.svh
examples_hw/apps/user_interrupts/: vfpga_top.svh
examples_hw/floorplans/: streaming_fplan.xdc
examples_hw/hyperloglog/: vfpga_top.svh
examples_hw/perf_local/: init_ip.tcl  vfpga_top.svh
examples_hw/perf_local/hdl/: perf_local.sv
examples_hw/rdma/: vfpga_top.svh
examples_hw/rdma_aes/: vfpga_top.svh
examples_sw/: CMakeLists.txt
examples_sw/apps/hls_vadd/: main.cpp
examples_sw/apps/kmeans/: classical_kmeans.cpp  main.cpp  utils.cpp
examples_sw/apps/multithreading/: main.cpp
examples_sw/apps/packet_sniffer/: README.md  conversion.cpp  main.cpp
examples_sw/apps/perf_fpga/: README.md  main.cpp
examples_sw/apps/perf_gpu/: main.cpp
examples_sw/apps/perf_local/: README.md  main.cpp
examples_sw/apps/rdma_aes/: main.cpp
examples_sw/apps/rdma_service/: README.md
examples_sw/apps/reconfigure_shell/: main.cpp
examples_sw/apps/tcp_iperf/: main.cpp
examples_sw/apps/user_interrupts/: README.md  main.cpp
examples_sw/perf_local/: main.cpp
experiments/02_synth_time/: CMakeLists.txt  README.md  gen_shell_checkpoints.py  run_synth.py
experiments/02_synth_time/floorplans/: fplan_u250.xdc
experiments/04_multitenancy/hw/: CMakeLists.txt
experiments/06_hyperloglog/hw/: CMakeLists.txt
hw/: CMakeLists.txt  config.cmake  examples.cmake
hw/bd/: cr_ctrl.tcl  cr_ddr.tcl  cr_hbm.tcl  cr_hbm_split.tcl  cr_pci.tcl
hw/bd/ultrascale_plus/: cr_ctrl.tcl  cr_hbm_split.tcl  cr_pci.tcl
hw/bd/versal/: cr_ctrl.tcl  cr_dcmac.tcl  cr_ddr.tcl  cr_hbm.tcl  cr_pci.tcl  cr_xbar.tcl  vck5000_ddr4_hier.reference.tcl
hw/constraints/enzian/: enzian_base.xdc
hw/constraints/u200/: u200_ddr_1.xdc  u200_ddr_2.xdc  u200_net_0.xdc
hw/constraints/u250/: u250_base.xdc  u250_ddr.xdc  u250_ddr_2.xdc  u250_ddr_3.xdc  u250_net.xdc  u250_net_1.xdc  u250_pcie.xdc
hw/constraints/u280/: u280_base.xdc  u280_ddr.xdc  u280_ddr_0.xdc  u280_ddr_1.xdc  u280_net.xdc  u280_net_1.xdc  u280_pcie.xdc
hw/constraints/u50/: u50_base.xdc  u50_pcie.xdc
hw/constraints/u55c/: u55c_base.xdc  u55c_net_0.xdc  u55c_net_1.xdc  u55c_pcie.xdc
hw/constraints/vcu118/: vcu118_base.xdc  vcu118_net_0.xdc  vcu_base.xdc  vcu_ddr.xdc  vcu_net.xdc
hw/hdl/cdma/: axi_dma_rd.sv  axi_dma_wr.sv  cdma.sv  (+1 more)
hw/scripts/: base.tcl.in  comphls.tcl.in  compile.tcl.in  config.tcl.in  dynamic.tcl.in  example.tcl.in  importhls.tcl.in  post.tcl.in  shell.tcl.in  sim.tcl.in
hw/sim/: axi_intf_sim.sv  c_axi.svh  c_axil.svh  c_drv.svh  c_env.svh  c_gen.svh  c_meta.svh  c_mon.svh  c_scb.svh  c_tbench.sv  c_trs.svh  lynx_intf_sim.sv  lynx_pkg.sv
hw/templates/: README.md  cyt_top_tmplt.txt  dynamic_top_tmplt.txt  dynamic_xbar_tmplt.txt  lynx_pkg_tmplt.txt  shell_ctrl_tmplt.txt  shell_top_tmplt.txt  static_top_tmplt.txt  user_logic_tmplt.txt  user_wrapper_tmplt.txt
sim/sw/: CMakeLists.txt
sw/: CMakeLists.txt  README.md
sw/base/: CMakeLists.txt
sw/cmake/: CoyoteConfig.cmake.in
sw/gbm/: CMakeLists.txt
sw/include/: bFunc.hpp  bThread.hpp  cArbiter.hpp  cBench.hpp  cConn.hpp  cDefs.hpp  cFunc.hpp  cGpu.hpp  cIbvClient.hpp  cIbvCtx.hpp  cIbvServer.hpp  cLib.hpp  cOps.hpp  cProc.hpp  cProcess.hpp  cRcnfg.hpp  cRnfg.hpp  cSched.hpp  cService.hpp  cTask.hpp  cThread.hpp  ibvQpConn.hpp  ibvQpMap.hpp  ibvStructs.hpp  sLock.hpp  tsc_x86.h
sw/rdma/: CMakeLists.txt
sw/scheduling/: CMakeLists.txt
sw/src/: bThread.cpp  cArbiter.cpp  cBench.cpp  cConn.cpp  cGpu.cpp  cIbvClient.cpp  cIbvCtx.cpp  cIbvServer.cpp  cProc.cpp  cProcess.cpp  cRcnfg.cpp  cRnfg.cpp  cSched.cpp  cService.cpp  cTask.cpp  cThread.cpp  ibvQpConn.cpp  ibvQpMap.cpp  ibvStructs.cpp
sw/stride/: CMakeLists.txt
(+8563 files in other folders)
